--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <h2 class="get-in-touch-text">Get In Touch</h2>
       <h3 class="work-on-some-projects-text">Want to work on some project together ?</h3>
       <p>If you wanna work on some project or just have a small chit chat, feel free to contact me</p>
-      <a href="mailto:name@email.com"><button type="button" name="button"  class="btn" >CONTACT ME</button></a>
+      <a href="mailto:shashwat2002joshi@gmail.com"><button type="button" name="button"  class="btn" >CONTACT ME</button></a>
     </div>
   </div>
 
